<resources>
    <string name="app_name">Kees</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="email_please">Please enter your email</string>
    <string name="choose_dob">Please choose date of birth</string>
    <string name="chooseLocation">Please choose Location</string>
    <string name="enter_area">Please Enter Area</string>
    <string name="passwordMatch">Passwords Dose not Match</string>
    <string name="enter_confirm">Please Enter Confirm Password</string>
    <string name="enter_pass">Please Enter Password</string>
    <string name="Error">Error Occurred</string>
    <string name="enter_phone">Please Enter Phone Number</string>
    <string name="addedToCartSuccessfully">Added to Cart Successfully</string>
    <string name="PleaseSpecifyTheWeekToArrive">Please Specify The Week To Arrive</string>
    <string name="SpecifyTheNuberOFItems">Please Specify The Number of Items You Want to Add to Cart</string>
    <string name="title_activity_change_location">ChangeLocationActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="change_location">Change Location</string>
    <string name="please_add_title">Please Add Title</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="orderdetails">Order Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="what_is_your_number">What Is Your Number</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_code_to_verify_the_information">We Will Send You Code to Verify The Information</string>
    <string name="Continue">Continue</string>
    <string name="login_using_fingerprint">Login Using fingerprint</string>
    <string name="dont_have_account">Don\'t Have Account</string>
    <string name="register_new_account">Register new account</string>
    <string name="categories">Categories</string>
    <string name="all_categories">All Categories</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="past_orders">Past Orders</string>
    <string name="about_us">About Us</string>
    <string name="privacy_and_policy">Privacy Policy</string>
    <string name="customer_service">Customer Service</string>
    <string name="change_language">Change Language</string>
    <string name="exit">Exit</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="create_accounttt">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="have_account">Have Account?</string>
    <string name="need_any_help">Need Any Help?</string>
    <string name="contact_support">Contact Support</string>
    <string name="address">Address</string>
    <string name="choose_location_from_map">Choose Location From Map</string>
    <string name="continue_location_info">Continue Location Info</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address_in_detail">Address In Detail</string>
    <string name="your_house_photo">Your House Photo</string>
    <string name="upload">Upload</string>
    <string name="optional">* Optional</string>
    <string name="i_approve_on">I Approve on</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="personal_information">Personal Information</string>
    <string name="client_name">Client Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="welcome_to_our_store">Welcome to Our Store</string>
    <string name="which_language_do_you_prefer">Which Language Do You Prefer</string>
    <string name="skip">Skip</string>
    <string name="to_kees">To Kees</string>
    <string name="got_an_account">Got an account</string>
    <string name="create_new_account">Create new account</string>
    <string name="enter_as_a_guest">Enter as a guest</string>
    <string name="drivers_portal">Drivers portal</string>
    <string name="send_otp_code">Send Otp Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_you_a_verification_code_via_your_phone_number">We Have Sent You a Verification Code Via Your Phone Number</string>
    <string name="resend">resend</string>
    <string name="change_password">Change Password</string>
    <string name="your_wishlist_is_empty_go_shopping">Your wishlist is empty , go shopping!</string>
    <string name="you_dont_have_any_notifications">You dont have any notifications</string>
    <string name="delete_all">Delete All</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="choose_the_cart_of_the_week">Choose the Cart of the Week</string>
    <string name="choose_the_quantity">Choose the Quantity</string>
    <string name="week">Week</string>
    <string name="wallet">Wallet</string>
    <string name="personal_data">Personal Data</string>
    <string name="addresses">Address</string>
    <string name="update">Update</string>
    <string name="changePhoneNumber">Change Phone Number</string>
    <string name="MyLocations">My Locations</string>
    <string name="add_new_location">Add New Location</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="date">Date:</string>
    <string name="order_details">Order Details</string>
    <string name="number_of_products">Number of products</string>
    <string name="notes">Notes</string>
    <string name="view_products">View Products</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="day">Day:</string>
    <string name="driver_name">Driver name</string>
    <string name="driver_number">Driver number</string>
    <string name="complete_order">Complete order</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="values">Values</string>
    <string name="contact_us">Contact Us</string>
    <string name="establishment_name">Name</string>
    <string name="your_notes">Your Notes</string>
    <string name="technical_support">Technical Support</string>
    <string name="weeklyCart">Weekly Cart</string>
    <string name="continue_to_payment">Continue To Payment</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="add_new_basket">Add New Basket</string>
    <string name="choose_shift">Choose Shift</string>
    <string name="choose_day">Choose Day</string>
    <string name="choose_week">Choose Week</string>
    <string name="checkOut">Checkout</string>
    <string name="your_weekly_orders_report">Your Weekly Orders Report</string>
    <string name="total_price">Total Price</string>
    <string name="total">Total</string>
    <string name="day_to_arrive">Day To Arrive</string>
    <string name="time_to_arrive">Time to Arrive</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="services_fees">Services Fees</string>
    <string name="total_tax">Total tax</string>
    <string name="online_pay">Go to payment</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="my_wallet">My Wallet</string>
    <string name="start_working_now">Start working now</string>
    <string name="orders">Orders</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="sub_total_price">Sub Total Price</string>
    <string name="pay">Pay</string>
</resources>