<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/main"/>
    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/orders_ic"
        android:title="@string/orders"/>
    <item
        android:id="@+id/previousOrdersFragment"
        android:icon="@drawable/recent_orders"
        android:title="@string/previous_orders"/>
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/notifications"
        android:title="@string/notifications"/>
<!--    <item-->
<!--        android:id="@+id/profile"-->
<!--        android:icon="@drawable/profile"-->
<!--        android:title="@string/profile"/>-->
    <item
        android:id="@+id/aboutUs"
        android:icon="@drawable/information"
        android:title="@string/about_us"/>
    <item
        android:id="@+id/exit"
        android:icon="@drawable/exit"
        android:title="@string/exit"/>
</menu>