<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DriverLoginActivity"
    android:background="@color/purpleColor"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-90dp"
            android:layout_marginBottom="-90dp"
            app:tint="#F10E8D"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="40dp"
            />

        <include
            android:id="@+id/included_tap"
            layout="@layout/login_app_bar"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/included_tap"
            android:textSize="20sp"
            android:layout_margin="40dp"
            android:fontFamily="@font/cairo_regular"
            />
        <TextView
            android:id="@+id/signInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/welcome"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            android:textSize="20sp"
            android:fontFamily="@font/cairo_bold"
            />

        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/signInLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/darkPurple"
                    android:textSize="18sp"
                    android:fontFamily="@font/cairo_bold"
                    android:textStyle="bold"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_edit_text"
                    >
                    <EditText
                        app:layoutDescription="@id/emailEt"
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/empty_edit_text"
                        android:textSize="16sp"
                        android:textColor="#7F7F7F"
                        android:fontFamily="@font/cairo_bold"
                        android:hint="@string/email"
                        android:paddingStart="15sp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        android:paddingEnd="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/darkPurple"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/cairo_bold"
                    android:textStyle="bold"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_edit_text"
                    >
                    <EditText
                        app:layoutDescription="@id/passwordEt"
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/empty_edit_text"
                        android:textSize="16sp"
                        android:textColor="#7F7F7F"
                        android:fontFamily="@font/cairo_bold"
                        android:hint="@string/password"
                        android:paddingStart="15sp"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:singleLine="true"
                        android:paddingEnd="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continueBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cornerRadius="25dp"
                    android:backgroundTint="@color/darkPurple"
                    android:text="@string/Continue"
                    android:textSize="16sp"
                    android:fontFamily="@font/cairo_bold"
                    android:textAllCaps="false"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/progressBar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:visibility="gone"-->
<!--        app:lottie_rawRes="@raw/kees"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>